<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="#3498DB">
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#2C3E50" />
    
    <Button android:id="@+id/btn_select_story"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" 
        android:text="@string/select_story" />
    
    <Button android:id="@+id/btn_settings"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" 
        android:text="@string/settings" />
    
    <Button android:id="@+id/btn_about"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" 
        android:text="@string/about" />
    
</LinearLayout>

