<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center" >
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#3498DB"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_marginBottom="50dp" />
    
    <Button android:id="@+id/btn_select_story"
        android:layout_height="wrap_content"
        android:layout_width="150dp" 
        android:text="@string/select_story" 
        android:textColor="#FFFFFF"
        android:background="#3498DB"
        android:layout_marginBottom="5dp" />
    
    <Button android:id="@+id/btn_settings"
        android:layout_height="wrap_content"
        android:layout_width="150dp" 
        android:text="@string/settings" 
        android:textColor="#FFFFFF"
        android:background="#3498DB"
        android:layout_marginBottom="5dp" />
    
    <Button android:id="@+id/btn_about"
        android:layout_height="wrap_content"
        android:layout_width="150dp" 
        android:text="@string/about" 
        android:textColor="#FFFFFF"
        android:background="#3498DB"
        android:layout_marginBottom="5dp" />
    
</LinearLayout>

