<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="#3498DB">
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_story"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#2C3E50" />
    
    <Button android:id="@+id/btn_old_testament"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" 
        android:text="@string/old_testament"/>
    
    <Button android:id="@+id/btn_new_testament"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" 
        android:text="@string/new_testament"/>
    
</LinearLayout>
