<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center" >
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_story"
        android:gravity="center"
        android:textSize="35sp"
        android:textColor="#3498DB"
        android:layout_marginBottom="50dp" />
    
    <Button android:id="@+id/btn_old_testament"
        android:layout_height="wrap_content"
        android:layout_width="200dp" 
        android:text="@string/old_testament" 
        android:textColor="#FFFFFF"
        android:background="#3498DB"
        android:layout_marginBottom="5dp" />
    
    <Button android:id="@+id/btn_new_testament"
        android:layout_height="wrap_content"
        android:layout_width="200dp" 
        android:text="@string/new_testament" 
        android:textColor="#FFFFFF"
        android:background="#3498DB"
        android:layout_marginBottom="5dp" />
    
</LinearLayout>
